[package]
name = "dmw3_randomizer"
version = "0.1.0"
edition = "2021"
description = "Digimon World 3 Randomizer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binread = "2.2.0"
binwrite = "0.2.1"
chrono = "0.4.26"
clap = { version = "4.0", features = ["derive"] }
dioxus = "0.4.0"
dioxus-desktop = "0.4.0"
futures-util = "0.3.28"
rand_xoshiro = "0.6.0"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
tokio = "1.32.0"

[package.metadata.bundle]
name = "DMW3 Randomizer"
identifier = "com.dmw3.randomizer"
icon = ["32x32.jpg", "64x64.jpg", "128x128.jpg"]
version = "1.0.0"
resources = ["assets"]
category = "Developer Tool"
short_description = "Digimon World 3 Randomizer"
osx_frameworks = []
deb_depends = [
  "libwebkit2gtk-4.1-dev", 
  "libgtk-3-dev", 
  "libayatana-appindicator3-dev"
]
osx_url_schemas = ["com.dmw3.randomizer"]
long_description = """
Digimon World 3 Randomizer
"""
