[package]
name = "dmw3_randomizer"
version = "1.0.0"
edition = "2021"
description = "Digimon World 3 Randomizer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binread = { version = "2.2.0", default-features = false }
binwrite = "0.2.1"
chrono = { version = "0.4.26", features = ["clock"], default-features = false }
clap = { version = "4.0", features = ["derive"], default-features = false }
dioxus = { version = "0.5.1", features = ["desktop", "hooks", "launch", "signals", "html", "macro"], default-features = false }
futures-util = { version = "0.3.28", default-features = false }
quick-xml = { version = "0.31.0", features = ["serialize", "overlapped-lists"], default-features = false }
rand_xoshiro = "0.6.0"
serde = { version = "1.0.185", features = ["derive"], default-features = false }
serde_json = { version = "1.0.105", default-features = false }
tokio = { version = "1.32.0", features = ["process"], default-features = false }
dmw3_structs = { git = "https://github.com/markisha64/dmw3-util" }
dmw3_consts = { git = "https://github.com/markisha64/dmw3-util" }
dmw3_model = { git = "https://github.com/markisha64/dmw3-util" }
dmw3_pack = { git = "https://github.com/markisha64/dmw3-util" }
rlen = { git = "https://github.com/markisha64/dmw3-util" }
tim = { git = "https://github.com/markisha64/dmw3-util" }
async-std = "1.12.0"
anyhow = { version = "1.0.86", default-features = false }
rusqlite = { version = "0.32.1", features = ["bundled"] }
home = "0.5.9"
tar = { version = "0.4.41", default-features = false }
boolinator = "2.4.0"
serde_yaml = "0.9.34"

[package.metadata.bundle]
name = "DMW3 Randomizer"
identifier = "com.dmw3.randomizer"
icon = ["assets/32.jpg", "assets/64.jpg", "assets/128.jpg"]
version = "1.0.0"
resources = ["assets", "mkpsxiso/build/mkpsxiso*", "mkpsxiso/build/dumpsxiso*"]
category = "Developer Tool"
short_description = "Digimon World 3 Randomizer"
osx_frameworks = []
deb_depends = [
  "libwebkit2gtk-4.1-dev", 
  "libgtk-3-dev", 
  "libayatana-appindicator3-dev"
]
osx_url_schemas = ["com.dmw3.randomizer"]
long_description = """
Digimon World 3 Randomizer
"""
